exercises/12_options/writeup.txt
⚠️  Compilation of exercises/12_options/options3.rs failed!, Compiler error message:

error[E0382]: use of partially moved value: `y`
  --> exercises/12_options/options3.rs:20:5
   |
17 |         Some(p) => println!("Co-ordinates are {},{} ", p.x, p.y),
   |              - value partially moved here
...
20 |     y; // Fix without deleting this line.
   |     ^ value used here after partial move
   |
   = note: partial move occurs because value has type `Point`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
17 |         Some(ref p) => println!("Co-ordinates are {},{} ", p.x, p.y),
   |              +++

error: aborting due to previous error

ajout d'un & pour utiliser la réference de y et pas le contenu
